# MiningSimulatorGameServer

./: .gitignore  CMakeLists.txt  README.md
ThirdFunc/ConfigFile/: ItemCfg.json  ItemConfig.csv  ShopCfg.json  StartSetCfg.json
ThirdFunc/JsonCocos/: Json.c  Json.h  extension.c  extension.h
ThirdFunc/ProtoFile/: Computer.proto  DBToGS.proto  GCToGS.proto  GSToDB.proto  GSToGC.proto  Item.proto  Shop.proto  util.proto
ThirdFunc/TinyFormat/: tinyformat.h
include/: Active.h  AllErrorCode.h  Buffer.h  Computer.h  ComputerComponent.h  ConfigConst.h  ConfigManager.h  Connection.h  ConnectionManager.h  DBActiveWrapper.h  DBManager.h  DataSource.h  FileUtils.h  GCInfo.h  Inventory.h  Kernel.h  Logging.h  NetCommand.h  ParseProto.h  PreDefine.h  ScriptManager.h  ShopManager.h  Singleton.h  ThreadSafeQueue.h  Time.h  User.h  UserDBDataStruct.h  UserDbDataMgr.h  UserManager.h  UserNetInfo.h  all_const.h  buffer.h  stdafx.h  util.h  util_time.h
include/ServerMS/: Active.h  AllErrorCode.h  Buffer.h  Computer.h  ComputerComponent.h  ConfigConst.h  ConfigManager.h  DBActiveWrapper.h  DataSource.h  Inventory.h  Kernel.h  ParseProto.h  PreDefine.h  ShopManager.h  Singleton.h  ThreadSafeQueue.h  User.h  UserDBDataStruct.h  UserDbDataMgr.h  UserManager.h  UserNetInfo.h  all_const.h  stdafx.h
include/ServerMS/DB/: DBManager.h
include/ServerMS/Log/: Logging.h
include/ServerMS/Network/: Connection.h  ConnectionManager.h
include/ServerMS/Time/: Time.h
sql/: db.sql
src/: Active.cpp  Computer.cpp  ConfigManager.cpp  Connection.cpp  ConnectionManager.cpp  DBActiveWrapper.cpp  DBManager.cpp  DataSource.cpp  GCInfo.cpp  Inventory.cpp  Kernel.cpp  Kernel_MainThread.cpp  Logging.cpp  ScriptManager.cpp  ShopManager.cpp  Time.cpp  User.cpp  UserDbDataMgr.cpp  UserManager.cpp  UserManager_AskHandler.cpp  UserManager_AskUserDBAsyn.cpp  UserManager_AsynQueryDBCallback.cpp  UserManager_GCMsg.cpp  UserManager_SynUserAskDBCallback.cpp  UserManager_UserCacheDBAsynCallback.cpp  User_MsgPoster.cpp  main.cpp  stdafx.cpp  util.cpp  util_time.cpp
src/ServerMS/: Active.cpp  Computer.cpp  ConfigManager.cpp  DBActiveWrapper.cpp  DataSource.cpp  Inventory.cpp  Kernel.cpp  Kernel_MainThread.cpp  ShopManager.cpp  User.cpp  UserDbDataMgr.cpp  UserManager.cpp  UserManager_AskHandler.cpp  UserManager_AskUserDBAsyn.cpp  UserManager_AsynQueryDBCallback.cpp  UserManager_GCMsg.cpp  UserManager_SynUserAskDBCallback.cpp  UserManager_UserCacheDBAsynCallback.cpp  User_MsgPoster.cpp  main.cpp  stdafx.cpp
src/ServerMS/DB/: DBManager.cpp
src/ServerMS/Log/: Logging.cpp
src/ServerMS/Network/: Connection.cpp  ConnectionManager.cpp
src/ServerMS/Time/: Time.cpp
